k8s/ingress/board-games-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: board-games-ingress
  namespace: main
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: boardgames.k8s
    http:
      paths:
      - path: /api/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: board-games-api-service
            port: 
              number: 4000
      - path: /(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: board-games-app-service
            port: 
              number: 8080
